wip: added auth
